# rust_game_engine

./: .gitignore  Cargo.toml
assets/material/: armour.json
assets/mesh/: teapot.mtl
assets/shaders/: g_buffer.frag  g_buffer.vert  light_cube.vert  light_pass.frag  light_pass.vert  test.frag  test.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
assets/shaders/deferred/: deferred.frag  deferred.vert  lightPass.glsl  mrt.frag  mrt.glsl  mrt.vert
assets/textures/: MarbleGreen_COLOR.tga  MarbleGreen_DISP.tga  MarbleGreen_NRM.tga  MarbleGreen_OCC.tga  MarbleGreen_SPEC.tga  test.tga
src/: main.rs
src/camera/: mod.rs
src/engine/: mod.rs
src/engine/renderer/: mod.rs
src/engine/renderer/device/: mod.rs
src/engine/renderer/g_buffer/: mod.rs
src/engine/renderer/memory/: mod.rs
src/engine/renderer/mesh/: loader.rs  mod.rs
src/engine/renderer/mics/: mod.rs
src/engine/renderer/resource/: mod.rs
src/engine/renderer/shader/: mod.rs  uniform.rs
src/engine/renderer/surface/: mod.rs
src/engine/renderer/texture/: mod.rs
src/engine/renderer/vk_commands/: mod.rs
src/renderer/: mod.rs
src/renderer/device/: mod.rs
src/renderer/g_buffer/: mod.rs
src/renderer/memory/: mod.rs
src/renderer/mesh/: loader.rs  mod.rs
src/renderer/resource/: mod.rs
src/renderer/shader/: material_parser.rs  mod.rs  shader_parser.rs  uniform.rs
src/renderer/surface/: mod.rs
src/renderer/texture/: mod.rs
src/renderer/vk_commands/: mod.rs
src/scene_object/: mod.rs
src/world/: mod.rs
