[package]
name = "rust_game_engine"
version = "0.1.0"
authors = ["JoelWaterworth <joelwaterworth@gmail.com>"]

[dependencies]
ash = "0.15.4"
winit = "0.5.6"
image = "0.10.4"
glsl-to-spirv = "0.1.2"
cgmath = { git = "https://github.com/brendanzab/cgmath.git"}
tobj = "0.1.2"

[target.'cfg(windows)'.dependencies]
user32-sys = "0.2.0"
winapi = "0.2.8"